# video

./: .gitignore  CMakeLists.txt
cpp/: CMakeLists.txt  main.cpp
data/: Видео0010.3gp
py/: ball_detect.py  camera_input.py  line_detect.py  video_Sobel.py  video_cutter.py
